--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   },
   "homepage": "https://github.com/joanna991/joanna991.github.io#readme",
   "dependencies": {
+    "g": "^2.0.1",
+    "gulp-cli": "^1.4.0",
     "jquery": "^3.2.1"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
+    "browser-sync": "^2.18.13",
+    "gulp": "^3.9.1",
     "react": "^16.2.0"
   }
 }
